Added background animation and navbar.

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,13 @@
 @import "tailwindcss";
 @custom-variant dark (&:is(.dark *));
+
+@theme {
+  --animate-pulse: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  --animate-pulseSlow: pulse 5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+
+  @keyframes pulse {
+    50% {
+      opacity: 0.5;
+    }
+  }
+}
