Fixed Background animation.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
-@import url('https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+html,
+body,
+#root {
+  height: 100%;
+  overflow: hidden;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --animate-pulse: pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  --animate-pulseSlow: pulse 5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  --font-hedvig: 'Hedvig Letters Sans', sans-serif;
+  --animate-hue-rotate: hueRotate 10s cubic-bezier(0.4,0,0.6,1) infinite;
+  --font-hedvig: "Hedvig Letters Sans", sans-serif;
 
-  @keyframes pulse {
-    50% {
-      opacity: 0.5;
+  @keyframes hueRotate {
+    0% {
+      filter: blur(64px) hue-rotate(0deg);
+    }
+    100% {
+      filter: blur(64px) hue-rotate(360deg);
     }
   }
 }
